[workspace]
members = ["compiler", "python"]

[package]
name = "dspython"
version = "0.1.0"
authors = ["탁동혁 <tdh8316@naver.com>"]
edition = "2018"
description = "Damn Small Python compiler"
license = "MIT"
repository = "https://github.com/tdh8316/dspython"

[dependencies]
clap = { git = "https://github.com/clap-rs/clap", tag = "v2.33.0" }
dsp_compiler = { path = "./compiler" }
dsp_python_codegen = { path = "./python/codegen" }
dsp_python_parser = { path = "./python/parser" }
