[package]
name = "dspython"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
rustpython-parser = { git = "https://github.com/RustPython/RustPython" }
rustpython-compiler = { git = "https://github.com/RustPython/RustPython" }
clap = { version = "3.2.12", features = ["derive"] }
num-bigint = "0.4.3"
num-traits = "0.2.14"
