[package]
name = "dspython"
version = "0.1.0"
edition = "2021"
authors = ["Donghyeok Tak <tdh8316@naver.com>"]
description = "DSPython is a damn small Python compiler designed to be used in small places for educational purposes."
license = "MIT"
repository = "https://github.com/tdh8316/DSPython"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
rustpython-parser = { git = "https://github.com/RustPython/RustPython", rev="866d06f" }
rustpython-compiler = { git = "https://github.com/RustPython/RustPython", rev="866d06f" }
clap = { version = "3.2.12", features = ["derive"] }
num-bigint = "0.4.3"
num-traits = "0.2.14"
