[package]
name = "dsp_compiler_error"
version = "0.1.0"
authors = ["탁동혁 <tdh8316@naver.com>"]
edition = "2018"
description = "Compiler error implementation"
license = "MIT"
repository = "https://github.com/tdh8316/dspython"

[dependencies]
dsp_python_parser = { path = "../../python/parser" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
