[package]
name = "dsp_python_codegen"
version = "0.1.0"
authors = ["탁동혁 <tdh8316@naver.com>"]
edition = "2018"
description = "LLVM IR generator for the dspython project."
license = "MIT"
repository = "https://github.com/tdh8316/dspython"

[dependencies]
dsp_compiler_error = { path = "../../compiler/error" }
dsp_compiler_mangler = { path = "../../compiler/mangler" }
dsp_compiler_value = { path = "../../compiler/value" }
dsp_python_parser = { path = "../parser" }
either = "1.6.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
num-bigint = "0.3"
num-complex = { version = "0.3", features = ["serde"] }
num-traits = "0.2"
