[package]
name = "dsp_python_parser"
version = "0.1.0"
authors = ["탁동혁 <tdh8316@naver.com>"]
edition = "2018"
description = "RustPython wrapper library for the dspython project."
license = "MIT"
repository = "https://github.com/tdh8316/dspython"

[dependencies]
rustpython-parser = { git = "https://github.com/RustPython/RustPython" }
rustpython-compiler = { git = "https://github.com/RustPython/RustPython" }
